<resources>
    <string name="channel_name">notification_channel</string>

    <string name="app_name">Exoself</string>
    <string name="action_logout">Log out</string>
    <string name="action_settings">Settings</string>
    <string name="tab_current">Current</string>
    <string name="tab_saved">Saved</string>
    <string name="tab_done">Done</string>
    <string name="tab_future">Future</string>

    <string name="executing_task">EXECUTING TASK</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="ready">READY</string>
    <string name="task_paused">TASK PAUSED</string>
    <string name="postponing_task">POSTPONING TASK</string>
    <string name="timer_up">TIMER UP</string>

    <string name="seconds">%d seconds elapsed</string>
    <string name="back_of_stack">Back of Stack</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="back">Go Back</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="tags">Tags</string>
    <string name="description">Description</string>
    <string name="color">Color</string>
    <string name="schedule_later">Schedule Later</string>
    <string name="add_to_current_tasks_button">Add to current tasks button</string>
    <string name="add_to_saved_tasks_button">Add to saved tasks button</string>
    <string name="complete_task_button">Complete task button</string>
</resources>