<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/complete_btn"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/complete_task_button"
        android:src="@drawable/ic_baseline_radio_button_unchecked_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/save_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/add_to_saved_tasks_button"
        android:src="@drawable/ic_baseline_star_border_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/add_to_current_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/add_to_current_tasks_button"
        android:src="@drawable/ic_baseline_add_circle_outline_24"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/save_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scheduled_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10sp"
        android:textSize="17sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/task_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="10dp"
        android:text=""
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tags"
        app:layout_constraintStart_toEndOf="@+id/complete_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:paddingBottom="5dp"
        android:text=""
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/complete_btn"
        app:layout_constraintTop_toBottomOf="@+id/task_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>